--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <a href="communtity.html">Community</a>
         <a href="login.html">Market</a>
         <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
     </nav>
     
     <div class="auth-buttons">
